--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <img src="./images/image-avatar.png" alt="">
         </div>
 
-        <p> Creation of <span>Jules Wyvern</span></p>
+        <p>Creation of <span class="name">Affan Maulana</span></p>
       </div>
     </div>
   </div>
